tests/ui/rust-2024/unsafe-env.e2021.stderr
error[E0133]: call to unsafe function `unsafe_fn` is unsafe and requires unsafe function or block
  --> $DIR/unsafe-env.rs:23:5
   |
LL |     unsafe_fn();
   |     ^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: unnecessary `unsafe` block
  --> $DIR/unsafe-env.rs:26:5
   |
LL |     unsafe {
   |     ^^^^^^ unnecessary `unsafe` block
   |
note: the lint level is defined here
  --> $DIR/unsafe-env.rs:11:8
   |
LL | #[deny(unused_unsafe)]
   |        ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0133`.
